// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={false}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={false}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={false}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={false}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={false}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={true}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={true}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 8`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={true}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityLightIcon [common] example testing should match snapshot(s) for 1.default 9`] = `
<Icon
  className="lucid-EligibilityLightIcon"
  isDisabled={true}
>
  <g>
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityLightIcon-half-circle lucid-EligibilityLightIcon-is-selected lucid-EligibilityLightIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;
